--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/helpers": "^1.3",
         "laravel/homestead": "^11.1",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.2"
+        "laravel/ui": "^2.2",
+        "spatie/laravel-fractal": "^5.8"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
